--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Aboue me!</title>
+		<title>About me!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,9 +41,14 @@
 							<header class="major">
 								<h1>About me</h1>
 								</header>
-									<h2>Chanakarn Luangpirom</h2>
-									<p><span class="image left"><img src="https://drive.google.com/uc?export=view&id=1HsFCaK5gJYH4X_0ZYrkmV_VrMnmp9_sq" alt="" /></span>Hi! I'm currently working as a marketing data analyst at Agoda. Ever since I graduated from my university I've been very active in the field of data analytics. I love to try new things and create my personal project after my day job. It has been around 2 years that I've taken interest in data analytics and technology field (since my internship in June 2019).<br/></p>
-									<p><span class="image right"><img src="https://drive.google.com/uc?export=view&id=1IO9kWiBnvz_MtiIV4ivLlgiaY4__n9do" alt="" /></span><br/>One of the reasons I've created this portfolio website is to keep track of what I've done & share my thoughts with the community. I know the learning road is long but I'm enjoying what I do! Also, during my free time I like to do some baking, cooking, and playing games. Although I've been busy with my graduate study prep recently, I try to continue as much as I can!</p>
+									<p><span class="image left"><img src="https://drive.google.com/uc?export=view&id=1HsFCaK5gJYH4X_0ZYrkmV_VrMnmp9_sq" alt="" /></span>Hi! my name is Chanakarn Luangpirom. An experienced Data Scientist/Analyst with a Master’s Degree in Operations Research at Cornell University, specializing in Data Analytics, and three years of professional experience.
+
+										Currently, I am working as an Analyst in Data Science with the analytics team at the Bank of Thailand. In this role, I analyze large datasets to evaluate policy impacts, employing econometric models (e.g., Regression Discontinuity) and Machine Learning techniques to model counterfactuals and assess policy implications. Additionally, I serve as a Research Visitor at the Puey Ungphakorn Institute for Economic Research, where I focus on analyzing company layoff events and employees' behavior post-layoff using large-scale payment data (> 20 billion rows) leveraging big data tools within the Hadoop ecosystem.
+										
+										Previously, I served as an Analyst/Senior Analyst at Agoda, where I conducted rigorous data analysis and performed A/B tests to optimize marketing campaign performance. My most successful project was when I pioneered the use of the Google Enhanced Conversions API, developing a code pipeline to send conversion data to Google. This enabled campaign performance measurement and led to the launch of YouTube as an ongoing campaign with an annual budget in the millions of dollars. Additionally, I developed multiple ETL pipelines integrating with various advertising partner APIs to aggregate and transform the data into a ready-to-use database, facilitating easy monitoring through Tableau dashboards.
+
+										<br/></p>
+									<p><span class="image right"><img src="https://drive.google.com/uc?export=view&id=1IO9kWiBnvz_MtiIV4ivLlgiaY4__n9do" alt="" /></span><br/>Thank you for visiting my page. Feel free to explore my work and reach out!</p>
 									<hr/>
 									</section>
 						</div>
