--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<a class="image main"><img src="images/aws_certifications.png" alt="" /></a>
 									<header class="major">
 										<span class="date">2024</span>
-										<h2><a href="https://github.com/Chanakarn-Luangpirom/Cartpole/tree/main">FX Regulations RAG Application</a></h2>
+										<h2><a href="https://github.com/Chanakarn-Luangpirom/Document_Searcher_RAG">FX Regulations RAG Application</a></h2>
 										<ul>
 											<li>Developed & Deployed an end-to-end RAG application used to answer questions related to FX Regulations</li>
 											<li>Combined lexical search & semantic search (TF-IDF & Gemini embeddings) to assign scores to each documents for accurate retrieval and response generation</li>
@@ -71,15 +71,15 @@
 								<article class="post featured">	
 									<header class="major">
 										<span class="date">2023</span>
-										<h2><a href="">Ranking Websites using Learning to Rank Algorithms</a></h2>
+										<h2><a href="https://github.com/Chanakarn-Luangpirom/Ranking_Webpages">Ranking Websites using Learning to Rank Algorithms</a></h2>
 										<ul>
-											<li>xxxxxxxxxxxxxxxxxxxxxxxxxxxxx</li>
-											<li>xxxxxxxxxxxxxxxxxxxxxx</li>	
+											<li>Implemented Pointwise, Pairwise, and Listwise learning to rank algorithms from scratch using PyTorch to rank webpages from the Microsoft learning to rank dataset</li>
+											<li>Added a slight variation to the problem where the predictions are made in real-time (online learning to rank) to evaluate regret incurred by each algorithms</li>	
 										</ul>
 									</header>
 									<a class="image main"><img src="images/learning_to_rank.png" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="" class="button large">View on Github</a></li>
+										<li><a href="https://github.com/Chanakarn-Luangpirom/Ranking_Webpages" class="button large">View on Github</a></li>
 									</ul>
 								</article>					 
 								<article class="post featured">	
@@ -96,26 +96,29 @@
 										<li><a href="https://github.com/Chanakarn-Luangpirom/Cartpole/tree/main" class="button large">View on Github</a></li>
 									</ul>
 								</article>
-								<!-- <article class="post featured">
+								<article class="post featured">
 									<header class="major">
-										<span class="date">2023</span>
-										<h2><a href="https://github.com/Chanakarn-Luangpirom/GPT">GPT</a></h2>
-
+										<span class="date">2021</span>
+										<h2><a href="https://github.com/Northerman/salary_bot">Salary Prediction Chatbot</a></h2>
+	
 										<ul>
-											<li>An implmentation of GPT from scratch following the tutorial by Andrej Karpathy</li>
-											<li>Includes an implementation of MultiHeadAttention and TransformerBlock to generate text sequences</li>
+											<li>Scraped around 10,000 job postings from jobsdb using python and BeautifulSoup. :<a href="https://colab.research.google.com/drive/1CxPKttPc71m3fAs-ZbRyHzjzmzwEeQ-_?usp=sharing"><b>Data Scraping Colab</b></a></li>
+											<li>Perform multiple text data cleaning such as salary & working experience extraction from text using regex.</li>
+											<li>Perform exploratory data analysis to gain insights for jobs using plotly & seaborn. : <a href="https://colab.research.google.com/drive/1Ipjt0Be_ZJM1BhYPNchVwGvKjPOqco4V?usp=sharing"><b>EDA & Cleaning Colab</b></a></li>
+											<li>Create a tree-based model to predict job salary given experience year & job function.</li>
+											<li>Built two salary prediction chatbot & models. (1.Using local database 2.Using Firebase)</li>
+											<li>Built a flask API endpoint hosted locally and use ngrok to communicate with dialogflow to identify user’s intent.</li>
 										</ul>
 									</header>
-									<a class="image main"><img src="images/gpt2.png" alt=""></a>
+									<a class="image main"><img src="images/chatbot_flow.png" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://github.com/Chanakarn-Luangpirom/GPT" class="button large">View on Github</a></li>
+										<li><a href="https://github.com/Northerman/salary_bot" class="button large">View on Github</a></li>
 									</ul>
-								</article>								 -->
-
+								</article>
 							<article class="post featured">
 								<header class="major">
 									<span class="date">2021</span>
-									<h2><a href="https://github.com/Northerman/salary_bot">Trading Bot Deployed on AWS</a></h2>
+									<h2><a href="https://github.com/Northerman/aws_tradingbot">Trading Bot Deployed on AWS</a></h2>
 
 									<ul>
 										<li>Trading bot deployed on AWS utilizing ECR (Elastic Container Registry) to deploy a docker image.</li>
@@ -130,25 +133,6 @@
 								<a class="image main"><img src="images/sns.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Northerman/aws_tradingbot" class="button large">View on Github</a></li>
-								</ul>
-							</article>
-							<article class="post featured">
-								<header class="major">
-									<span class="date">2020</span>
-									<h2><a href="https://github.com/Northerman/salary_bot">Salary Prediction Chatbot</a></h2>
-
-									<ul>
-										<li>Scraped around 10,000 job postings from jobsdb using python and BeautifulSoup. :<a href="https://colab.research.google.com/drive/1CxPKttPc71m3fAs-ZbRyHzjzmzwEeQ-_?usp=sharing"><b>Data Scraping Colab</b></a></li>
-										<li>Perform multiple text data cleaning such as salary & working experience extraction from text using regex.</li>
-										<li>Perform exploratory data analysis to gain insights for jobs using plotly & seaborn. : <a href="https://colab.research.google.com/drive/1Ipjt0Be_ZJM1BhYPNchVwGvKjPOqco4V?usp=sharing"><b>EDA & Cleaning Colab</b></a></li>
-										<li>Create a tree-based model to predict job salary given experience year & job function.</li>
-										<li>Built two salary prediction chatbot & models. (1.Using local database 2.Using Firebase)</li>
-										<li>Built a flask API endpoint hosted locally and use ngrok to communicate with dialogflow to identify user’s intent.</li>
-									</ul>
-								</header>
-								<a class="image main"><img src="images/chatbot_flow.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/Northerman/salary_bot" class="button large">View on Github</a></li>
 								</ul>
 							</article>
 							<article class="post featured">
